@@ -1,3 +1,9 @@
+2021-10-13 Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Headers/Additions/GNUstepGUI/GSTheme.h: Add tabview enum
+	* Source/GSAutocompleteWindow.h: Fix signature mismatch
+	* Source/GSThemeDrawing.m: Move tabview enum to header.
+
 2021-10-12 Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Source/NSBitmapImageRep.m: Change initWithBitmapDataPlanes:...
